# pydata_2021

./: .gitignore  .gitmodules  LICENSE  README.md  appveyor.yml  index.html
.github/workflows/: ppt.yml  python-app.yml
docs/: presentation.md
src/: .gitignore  requirements.txt
src/cpp/: CMakeLists.txt  main.cpp
src/models/onnx_models/: log_reg_model.onnx  random_forest_model.onnx
src/scripts/: classification_model.py  log_reg_model.onnx  main.py  test_log_reg.py  test_random_forest.py
src/scripts/logistic_regression/: model.py
src/scripts/onnx_models/: log_reg_model.onnx  random_forest_model.onnx
src/scripts/random_forest/: model.py
src/scripts/svm/: model.py
